--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongodb": "^4.8.1",
-    "mongoose": "^6.5.2"
+    "mongoose": "^6.5.2",
+    "pine": "^1.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
