--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,15 @@
     "@types/react-dom": "^18.0.6",
     "bootstrap": "^5.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.34.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "http://localhost:8000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -49,5 +52,8 @@
     "typescript"
   ],
   "author": "Monayam Reshad",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/react-bootstrap": "^0.32.30"
+  }
 }
